src/test/resources/extension/valid/newtype/newtypeDef.awsl
begin

newtype MyType is
    int x;
    char y;
end

MyType a = MyType(2, 'k');
MyType b = MyType(1, 'f');

exit(0);

end