src/test/resources/extension/invalid/newtype/unionEmpty.awsl
begin

newtype Nothing is union
end

exit(100);

end